--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>旅館預約服務</title>
+  <title>查看旅館房型</title>
   <style>
     * {
       box-sizing: border-box;
@@ -55,7 +55,7 @@
 </head>
 
 <body>
-  <h1 style="font-size: 30px; text-align: center; margin-bottom: 40px;">旅館預約服務</h1>
+  <h1 style="font-size: 30px; text-align: center; margin-bottom: 40px;">查看旅館房型</h1>
   <ul class="roomList">
 
   </ul>
