--- a/room.html
+++ b/room.html
@@ -43,7 +43,7 @@
 </head>
 
 <body>
-  <h1 style="font-size: 30px; text-align: center; margin-bottom: 40px;">旅館預約服務</h1>
+  <h1 style="font-size: 30px; text-align: center; margin-bottom: 40px;">房間介紹</h1>
   <div class="roomInfo">
 
   </div>
